[gd_scene load_steps=6 format=3 uid="uid://dp8cybb476vqi"]

[ext_resource type="Script" uid="uid://bc5b3lbe1h3rh" path="res://assets/items/pizzabox_stack.gd" id="1_16iny"]
[ext_resource type="Script" uid="uid://cq75s88v7lyr3" path="res://assets/items/pizzabox_stack_interactable.gd" id="2_16iny"]

[sub_resource type="BoxShape3D" id="BoxShape3D_16iny"]
size = Vector3(1.998, 2.9851441, 2.03)

[sub_resource type="SphereShape3D" id="SphereShape3D_lo3yj"]
radius = 1.1214485

[sub_resource type="SphereShape3D" id="SphereShape3D_16iny"]
radius = 2.2922258

[node name="Pizzabox_Stack" type="Node3D" node_paths=PackedStringArray("pizza_boxes")]
script = ExtResource("1_16iny")
pizza_boxes = NodePath("body/PizzaBoxes")
metadata/place = true

[node name="body" type="RigidBody3D" parent="." groups=["static"]]
collision_layer = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4932557, 0.025)
shape = SubResource("BoxShape3D_16iny")

[node name="Interactable" type="Node3D" parent="body" node_paths=PackedStringArray("pizza_box_stack")]
script = ExtResource("2_16iny")
pizza_box_stack = NodePath("../..")

[node name="StackArea" type="Area3D" parent="body"]
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="body/StackArea"]
shape = SubResource("SphereShape3D_lo3yj")

[node name="DetectionArea" type="Area3D" parent="body"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="body/DetectionArea"]
shape = SubResource("SphereShape3D_16iny")

[node name="PizzaBoxes" type="Node3D" parent="body"]
metadata/place = true
metadata/pizzaboxes = true

[connection signal="body_entered" from="body/StackArea" to="." method="_on_stack_area_body_entered"]
[connection signal="body_entered" from="body/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="body/DetectionArea" to="." method="_on_detection_area_body_exited"]
